2003-05-06  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "hi" in ALL_LINGUAS.

2003-05-05  Andreas Guelzow <aguelzow@taliesin.ca>
	
	* stf.c (stf_read_workbook_auto_csvtab): make guesswork utf-8 
	  clean and make it more likely to guess tsv

2003-05-05  Morten Welinder  <terra@gnome.org>

	* src/mathfunc.c (pfuncinverter): New function, extracted from
	qgamma.
	(qgamma): Use pfuncinverter.
	(qbeta): Replace R's version by pfuncinverter-based one.
	(dbeta): New from R.

2003-05-05  Andreas Guelzow <aguelzow@taliesin.ca>

	* src/Makefile.am: removed src/charset.[ch]
	* src/charset.[ch]: removed (replaced by 
	  src/widgets/widget-charmap-selector.[ch])
	* src/gui-file.c: replaced data block CharmapChooser by 
	  widget CharmapSelector including the corresponding
	  function calls

2003-05-05  Andreas Guelzow <aguelzow@taliesin.ca>

	* src/charset.c (make_charmap_chooser): move declarations
	  where they belong

2003-05-05  Andreas Guelzow <aguelzow@taliesin.ca>

	* src/charset.c (set_encodings_menu): handle unknown 
	  locale encoding

2003-05-05  Andreas Guelzow <aguelzow@taliesin.ca>

	* src/bonobo-io.c (gnm_persist_stream_load): add argument
	  to call of wb_view_new_from_input
	
	* src/charset.c: new file
	* src/charset.h: new file
	* src/file-priv.h: (_GnmFileOpenerClass): add argument to
	  declaration of open method
	(_GnmFileOpener): add encoding_dependent field
	(gnm_file_opener_setup): add argument
	
	* src/file.c (gnm_file_opener_open_real): new argument to pass 
	  to open call
	(gnm_file_opener_setup): new argument to be used for 
	  initialization of added field
	(gnm_file_opener_new): add argument to call of 
	  gnm_file_opener_setup
	(gnm_file_opener_new_with_enc): new function
	(gnm_file_opener_is_encoding_dependent): new function
	(gnm_file_opener_open): new argument
	
	* src/file.h (GnmFileOpenerOpenFuncWithEnc): new type
	(gnm_file_opener_new_with_enc): new function
	(gnm_file_opener_open): new argument