@@ -1,3 +1,8 @@
+2003-05-06  Morten Welinder  <terra@gnome.org>
+
+	* src/mathfunc.c (qbeta): Improve guess in log_p and lower_tail
+	cases.
+
 2003-05-06  Guntupalli Karunakar  <karunakar@freedomink.org>
 
 	* configure.in: Added "hi" in ALL_LINGUAS.
